--- a/nodeapp/values.yaml
+++ b/nodeapp/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: rohitgdevops/node-app
+  repository: rohitk09/test
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
 imagePullSecrets: []
@@ -39,8 +39,7 @@ podAnnotations: {}
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
 
-env:
-  APP_VERSION: 37329a1136a9244a3a54150a2b956b472ad652c7
+
 podSecurityContext: {}
   # fsGroup: 2000
 
