--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           cd nodeapp
           
-          sed -i 's|^\(\s*tag:\s*\).*|\1"'"$IMAGE_TAG"'"|' values.yaml
+          sed -i "s|^\(\s*tag:\s*\).*|\1\"$IMAGE_TAG\"|" values.yaml
           git config --global user.name 'devopsgrohit'
           git config --global user.email 'rohitcoolinbox@gmail.com'
           git add values.yaml
