--- a/nodeapp/values.yaml
+++ b/nodeapp/values.yaml
@@ -8,7 +8,7 @@ replicaCount: 1
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: rohitk09/test
-  tag: "latest-${GITHUB_RUN_NUMBER}"
+  tag: "latest-23"
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
 imagePullSecrets: []
